--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tailwind": "tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css -w"
   },
   "dependencies": {
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
