--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-lines-ellipsis": "^0.15.4",
     "react-parallax-tilt": "^1.7.176",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.1",
     "tailwindcss": "^3.3.6",
     "vite-plugin-svgr": "^4.2.0"
