--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-parallax-tilt": "^1.7.176",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.1",
+    "react-tabs": "^6.0.2",
     "tailwindcss": "^3.3.6",
     "vite-plugin-svgr": "^4.2.0"
   },
