--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "react": "^18",
     "react-dom": "^18",
     "react-lines-ellipsis": "^0.15.4",
+    "react-markdown": "^9.0.1",
     "react-responsive-carousel": "^3.2.23",
-    "react-tabs": "^6.0.2"
+    "react-tabs": "^6.0.2",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lines-ellipsis": "^0.15.5",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
