--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "tailwind -i ./styles/input.css -o ./styles/output.css & next build",
+    "build": "tailwind -i ./src/styles/input.css -o ./src/styles/output.css & next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tailwind": "tailwind -i ./src/styles/input.css -o ./src/styles/output.css -w"
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
