--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "tailwind -i ./src/styles/input.css -o ./src/styles/output.css & next build",
+    "build": "tailwind -i ./src/styles/input.css -o ./src/styles/output.css && next build",
     "start": "next start",
     "lint": "next lint",
     "tailwind": "tailwind -i ./src/styles/input.css -o ./src/styles/output.css -w"
