--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-markdown": "^9.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-tabs": "^6.0.2",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
