--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-lines-ellipsis": "^0.15.4",
-    "react-markdown": "^9.0.1",
+    "react-remark": "^2.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-tabs": "^6.0.2",
     "remark-gfm": "^4.0.0",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
