--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "framer-motion": "^10.16.16",
+    "mongodb": "^7.0.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -21,7 +22,8 @@
     "react-tabs": "^6.0.2",
     "rehype-highlight": "^7.0.0",
     "remark-gfm": "^4.0.0",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
