--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "rehype-highlight": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "server-only": "^0.0.1",
-    "sharp": "^0.34.5"
+    "sharp": "0.33.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
